Fixed text alignment on website

--- a/website/css/styles.scss
+++ b/website/css/styles.scss
@@ -128,7 +128,7 @@ div.section {
   padding: 20px 0px;
   align-items: center;
   border-radius: 20px;
-  max-width: 1000px;
+  max-width: 1050px;
   align-items: center;
   column-gap: 40px;
 }
